# scotty-timerstate

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  default.nix  docker-compose.yml  release.nix  scotty-timerstate.cabal
src/: Main.hs  Model.hs
