cabal-version:       >=1.10

name:                scotty-timerstate
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md

executable scotty-timerstate
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       Model
  build-depends:       aeson,
                       base >= 4.12 && < 4.13,
                       base-compat == 0.10.5,
                       data-default-class,
                       mtl,
                       scotty,
                       stm,
                       suspend,
                       text,
                       timers,
                       transformers,
                       wai-extra
  GHC-options:         -Wall -threaded